--- a/app.yaml
+++ b/app.yaml
@@ -64,7 +64,7 @@ metadata:
     nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
 spec:
   rules:
-  - host: "engage.kovaion.dev"
+  - host: "sportziaapp.kovaionplay.com"
     http:
       paths:
       - path: /
